EventControllerTest changes to use IDs instead of invite codes