@@ -15,8 +15,7 @@ class EventControllerTest {
     @BeforeEach
     void setUp() {
         repo = new TestEventRepository();
-        TestParticipantRepository partRepo = new TestParticipantRepository();
-        eventc = new EventController(repo,partRepo);
+        eventc = new EventController(repo);
     }
 
     @Test
@@ -48,7 +47,7 @@ class EventControllerTest {
     void getById() {
         Event x = new Event("Event 1");
         Event event = eventc.save(x).getBody();
-        var bad_req = eventc.getById(4L);
+        var bad_req = eventc.getById("");
         assertEquals(BAD_REQUEST, bad_req.getStatusCode());
         Event find = eventc.getById(event.getId()).getBody();
         assertTrue(repo.calledMethods.contains("findById"));
@@ -59,9 +58,9 @@ class EventControllerTest {
     void getByInviteCode() {
         Event x = new Event("Test");
         Event event = eventc.save(x).getBody();
-        String inviteCode = event.getInviteCode();
-        assertEquals(event, eventc.getByInviteCode(inviteCode).getBody());
-        assertEquals(BAD_REQUEST, eventc.getByInviteCode(null).getStatusCode());
+        String inviteCode = event.getId();
+        assertEquals(event, eventc.getById(inviteCode).getBody());
+        assertEquals(BAD_REQUEST, eventc.getById(null).getStatusCode());
     }
 
     @Test
@@ -72,8 +71,8 @@ class EventControllerTest {
         eventc.save(x1);
         eventc.save(x2);
         eventc.save(x3);
-        var actual = eventc.deleteById(eventc.getAll().get(0).getId());
-        var bad_req = eventc.deleteById(-1);
+        var actual = eventc.deleteById(eventc.getAll().getFirst().getId());
+        var bad_req = eventc.deleteById("c");
         assertTrue(repo.calledMethods.contains("deleteById"));
         assertEquals(x1, actual.getBody());
         assertFalse(repo.events.contains(x1));
@@ -85,10 +84,10 @@ class EventControllerTest {
     void updateTitle() {
         Event x1 = new Event("Event 1");
         eventc.save(x1);
-        eventc.updateTitle(eventc.getAll().get(0).getId(),"New Event");
-        var bad_req = eventc.updateTitle(12423432L, "Test");
+        eventc.updateTitle(eventc.getAll().getFirst().getId(),"New Event");
+        var bad_req = eventc.updateTitle("", "Test");
         assertTrue(repo.calledMethods.contains("save"));
-        assertEquals("New Event",eventc.getAll().get(0).getTitle());
+        assertEquals("New Event",eventc.getAll().getFirst().getTitle());
         assertEquals(BAD_REQUEST, bad_req.getStatusCode());
     }
 }
